<resources>
    <string name="app_name">BookDemo</string>

    <!--Login Activity-->
    <string name="tv_login_word">Login In</string>
    <string name="et_login_username">Username</string>
    <string name="et_login_password">Password</string>
    <string name="bt_login">Login</string>
    <string name="tv_register">Register Here</string>
    <string name="tv_forget">Forget Password</string>

    <string name="title_library">Library</string>
    <string name="title_discovery">Discovery</string>
    <string name="title_me">Me</string>

</resources>
