<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/tv_login_word"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:text="@string/tv_login_word" />

    <EditText
        android:id="@+id/et_login_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/et_login_username"
        android:inputType="text"
        android:layout_below="@id/tv_login_word"/>

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/et_login_password"
        android:inputType="textPassword"
        android:layout_below="@id/et_login_username"/>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/bt_login"
        android:layout_below="@id/et_login_password"/>

    <LinearLayout
        android:id="@+id/ll_login_buttom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@id/bt_login"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_register" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="#dedede" />

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_forget" />
    </LinearLayout>

</RelativeLayout>